--- a/src/components/FocusTimer/FocusTimer.css
+++ b/src/components/FocusTimer/FocusTimer.css
@@ -1,4 +1,25 @@
-.font__header {
+:root {
+  --elegant-clockColor: #8a6626;
+  --elegant-fontColor: #efc8b1;
+  --elegant-backgroundColor: #efc8b1;
+  --dependable-clockColor: #241f1c;
+  --dependable-fontColor: #937047;
+  --dependable-backgroundColor: #937047;
+  --friendly-clockColor: #bdfff6;
+  --friendly-fontColor: #e23c52;
+  --friendly-backgroundColor: #e23c52;
+  --laid-back-clockColor: #4d3227;
+  --laid-back-fontColor: #ebc999;
+  --laid-back-backgroundColor: #ebc999;
+
+  --deg: 180deg;
+
+  --clockColor: var(--elegant-clockColor);
+  --fontColor: var(--elegant-fontColor);
+  --backgroundColor: var(--elegant-backgroundColor);
+}
+
+.focus__container {
   font-size: 3rem;
   font-weight: bolder;
   text-align: center;
