Adds css for clocks as well as wrapping elements inside of entire component to make sure they can wrap when window is smaller

--- a/src/components/FocusTimer/FocusTimer.css
+++ b/src/components/FocusTimer/FocusTimer.css
@@ -35,6 +35,7 @@
   font-size: 1.5rem;
   color: var(--clockColor);
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   position: sticky;
   width: 100%;
