--- a/src/components/Clock/Clock.css
+++ b/src/components/Clock/Clock.css
@@ -1,3 +1,13 @@
+.clock {
+  color: var(--fontColor);
+  margin-right: 15px;
+  border: var(--fontColor) outset;
+  padding: 5px;
+  height: 1.5rem;
+  font-family: digital-7;
+  background: var(--clockColor);
+}
+
 .clock__hide__colon {
   color: var(--clockColor);
 }
