--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -13,3 +13,10 @@
 .button__selected {
   filter: hue-rotate(calc(var(--deg) + 30deg)) brightness(130%);
 }
+
+.focus__buttons {
+  /* border: red solid; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
