--- a/src/components/Clock/Clock.css
+++ b/src/components/Clock/Clock.css
@@ -1,3 +1,9 @@
+.focus__timer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 .clock {
   color: var(--fontColor);
   margin-right: 15px;
