--- a/src/components/FocusTimer/FocusTimer.css
+++ b/src/components/FocusTimer/FocusTimer.css
@@ -37,6 +37,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;
   position: sticky;
   width: 100%;
 }
