--- a/src/components/Clock/Clock.css
+++ b/src/components/Clock/Clock.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .clock {
@@ -16,4 +18,14 @@
 
 .clock__hide__colon {
   color: var(--clockColor);
+}
+
+@media only screen and (max-width: 800px) {
+  .focus__timer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
 }
